crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_loops_without_invariants.rs
//@ verify
fn bad_loop(mut x: i32) {
    while x < 3 {
        if x > 0 {
            break;
        }
        x = x + 1;
    }
}

fn main() {}
